[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MonthsPopup.gd" type="Script" id=1]
[ext_resource path="res://scripts/tab_open.gd" type="Script" id=2]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PathContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PathContainer"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 17.0
text = "Path:"

[node name="Editor" type="TextEdit" parent="PathContainer"]
margin_left = 36.0
margin_right = 830.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Path to RECORDS or RECORDS/month folder here"
deselect_on_focus_loss_enabled = false
wrap_enabled = true

[node name="OpenButton" type="Button" parent="PathContainer"]
margin_left = 834.0
margin_right = 925.0
margin_bottom = 20.0
text = "Open Folder"

[node name="ClassifyButton" type="Button" parent="PathContainer"]
margin_left = 929.0
margin_right = 989.0
margin_bottom = 20.0
hint_tooltip = "This option will change the functionality of the Open Folder button to automatically classify and order all logs in the directory based on exploits detected."
toggle_mode = true
text = "Classify"

[node name="MTButton" type="Button" parent="PathContainer"]
margin_left = 993.0
margin_right = 1024.0
margin_bottom = 20.0
hint_tooltip = "Multi-threading: toggling this button will enable multi-threading, resulting in improved performance in trade of stability."
toggle_mode = true
text = "MT"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 28.0

[node name="SearchContainer" type="HBoxContainer" parent="."]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="Player" type="Label" parent="SearchContainer"]
margin_top = 3.0
margin_right = 43.0
margin_bottom = 17.0
text = "Player:"

[node name="PlayerName" type="TextEdit" parent="SearchContainer"]
margin_left = 47.0
margin_right = 222.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="VSeparator" type="VSeparator" parent="SearchContainer"]
margin_left = 226.0
margin_right = 230.0
margin_bottom = 20.0

[node name="Car" type="Label" parent="SearchContainer"]
margin_left = 234.0
margin_top = 3.0
margin_right = 258.0
margin_bottom = 17.0
text = "Car:"

[node name="CarName" type="TextEdit" parent="SearchContainer"]
margin_left = 262.0
margin_right = 438.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="VSeparator2" type="VSeparator" parent="SearchContainer"]
margin_left = 442.0
margin_right = 446.0
margin_bottom = 20.0

[node name="Serial" type="Label" parent="SearchContainer"]
margin_left = 450.0
margin_top = 3.0
margin_right = 489.0
margin_bottom = 17.0
text = "Serial:"

[node name="SerialNumber" type="TextEdit" parent="SearchContainer"]
margin_left = 493.0
margin_right = 786.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="VSeparator3" type="VSeparator" parent="SearchContainer"]
margin_left = 790.0
margin_right = 794.0
margin_bottom = 20.0

[node name="Day" type="OptionButton" parent="SearchContainer"]
margin_left = 798.0
margin_right = 844.0
margin_bottom = 20.0
hint_tooltip = "Day filter. Only the selected day will show up on the list."
text = "All"
items = [ "All", null, false, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null, "6", null, false, 6, null, "7", null, false, 7, null, "8", null, false, 8, null, "9", null, false, 9, null, "10", null, false, 10, null, "11", null, false, 11, null, "12", null, false, 12, null, "13", null, false, 13, null, "14", null, false, 14, null, "15", null, false, 15, null, "16", null, false, 16, null, "17", null, false, 17, null, "18", null, false, 18, null, "19", null, false, 19, null, "20", null, false, 20, null, "21", null, false, 21, null, "22", null, false, 22, null, "23", null, false, 23, null, "24", null, false, 24, null, "25", null, false, 25, null, "26", null, false, 26, null, "27", null, false, 27, null, "28", null, false, 28, null, "29", null, false, 29, null, "30", null, false, 30, null, "31", null, false, 31, null ]
selected = 0

[node name="VSeparator5" type="VSeparator" parent="SearchContainer"]
margin_left = 848.0
margin_right = 852.0
margin_bottom = 20.0

[node name="Hour" type="OptionButton" parent="SearchContainer"]
margin_left = 856.0
margin_right = 902.0
margin_bottom = 20.0
text = "All"
items = [ "All", null, false, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null, "6", null, false, 6, null, "7", null, false, 7, null, "8", null, false, 8, null, "9", null, false, 9, null, "10", null, false, 10, null, "11", null, false, 11, null, "12", null, false, 12, null, "13", null, false, 13, null, "14", null, false, 14, null, "15", null, false, 15, null, "16", null, false, 16, null, "17", null, false, 17, null, "18", null, false, 18, null, "19", null, false, 19, null, "20", null, false, 20, null, "21", null, false, 21, null, "22", null, false, 22, null, "23", null, false, 23, null, "0", null, false, 24, null ]
selected = 0

[node name="Minute" type="OptionButton" parent="SearchContainer"]
margin_left = 906.0
margin_right = 952.0
margin_bottom = 20.0
text = "All"
items = [ "All", null, false, 0, null, "01", null, false, 1, null, "02", null, false, 2, null, "03", null, false, 3, null, "04", null, false, 4, null, "05", null, false, 5, null, "06", null, false, 6, null, "07", null, false, 7, null, "08", null, false, 8, null, "09", null, false, 9, null, "10", null, false, 10, null, "11", null, false, 11, null, "12", null, false, 12, null, "13", null, false, 13, null, "14", null, false, 14, null, "15", null, false, 15, null, "16", null, false, 16, null, "17", null, false, 17, null, "18", null, false, 18, null, "19", null, false, 19, null, "20", null, false, 20, null, "21", null, false, 21, null, "22", null, false, 22, null, "23", null, false, 23, null, "24", null, false, 24, null, "25", null, false, 25, null, "26", null, false, 26, null, "27", null, false, 27, null, "28", null, false, 28, null, "29", null, false, 29, null, "30", null, false, 30, null, "31", null, false, 31, null, "32", null, false, 32, null, "33", null, false, 33, null, "34", null, false, 34, null, "35", null, false, 35, null, "36", null, false, 36, null, "37", null, false, 37, null, "38", null, false, 38, null, "39", null, false, 39, null, "40", null, false, 40, null, "41", null, false, 41, null, "42", null, false, 42, null, "43", null, false, 43, null, "44", null, false, 44, null, "45", null, false, 45, null, "46", null, false, 46, null, "47", null, false, 47, null, "48", null, false, 48, null, "49", null, false, 49, null, "50", null, false, 50, null, "51", null, false, 51, null, "52", null, false, 52, null, "53", null, false, 53, null, "54", null, false, 54, null, "55", null, false, 55, null, "56", null, false, 56, null, "57", null, false, 57, null, "58", null, false, 58, null, "59", null, false, 59, null, "00", null, false, 60, null ]
selected = 0

[node name="VSeparator4" type="VSeparator" parent="SearchContainer"]
margin_left = 956.0
margin_right = 960.0
margin_bottom = 20.0

[node name="MonthsButton" type="MenuButton" parent="SearchContainer"]
margin_left = 964.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Months"
items = [ "January", null, 1, true, false, 0, 0, null, "", false, "February", null, 1, true, false, 1, 0, null, "", false, "March", null, 1, true, false, 2, 0, null, "", false, "April", null, 1, true, false, 3, 0, null, "", false, "May", null, 1, true, false, 4, 0, null, "", false, "June", null, 1, true, false, 5, 0, null, "", false, "July", null, 1, true, false, 6, 0, null, "", false, "August", null, 1, true, false, 7, 0, null, "", false, "September", null, 1, true, false, 8, 0, null, "", false, "October", null, 1, true, false, 9, 0, null, "", false, "November", null, 1, true, false, 10, 0, null, "", false, "December", null, 1, true, false, 11, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 1 )

[node name="Status" type="Label" parent="."]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 0.686275, 0.686275, 1 )
align = 1

[node name="ItemList" type="ItemList" parent="."]
margin_top = 74.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
max_text_lines = 3000
max_columns = 36
same_column_width = true

[connection signal="pressed" from="PathContainer/OpenButton" to="." method="_on_OpenButton_pressed"]
[connection signal="pressed" from="PathContainer/ClassifyButton" to="." method="_on_ClassifyButton_pressed"]
[connection signal="pressed" from="PathContainer/MTButton" to="." method="_on_MTButton_pressed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
